# nrf52840-hello

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: logger.rs  main.rs
