[package]
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52840-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
nrf52840-hal = "0.16.0"
log = "0.4.17"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52840-hello"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
